--- a/MoviesModuleCode.ipynb
+++ b/MoviesModuleCode.ipynb
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "15207f24",
+   "id": "06e7b4b8",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5008ccfa",
+   "id": "dfb11c37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "2843e629",
+   "id": "acac66ef",
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b370a037",
+   "id": "c6ae0e43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1a9588a0",
+   "id": "b574f848",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1653,7 +1653,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ea9bd761",
+   "id": "fe7829ba",
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0a4bb3ba",
+   "id": "ff77a6a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2378addb",
+   "id": "fbe8de1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "3c9a5e01",
+   "id": "1f808fb9",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a73157a1",
+   "id": "1218b0ab",
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "de0a8c12",
+   "id": "2008adfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,7 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "593e1567",
+   "id": "6aedee45",
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9df39b45",
+   "id": "11e89030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1838,7 +1838,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9bd4feea",
+   "id": "42fabc4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "72d66c78",
+   "id": "7948c3c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e52315cf",
+   "id": "f8fb9250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "4f7c6600",
+   "id": "e221f53a",
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1974,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "bc348746",
+   "id": "51a74927",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2027,7 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "256793de",
+   "id": "42a16ae1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2037,7 +2037,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "e76ca782",
+   "id": "7d2b3d0a",
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "a792afbc",
+   "id": "de9b593b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "5c430cb4",
+   "id": "a2faf5ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2089,7 +2089,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "007b0e25",
+   "id": "dd41ff9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2099,7 +2099,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "0de182ad",
+   "id": "b4da1077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2109,7 +2109,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "8368e4ac",
+   "id": "1a89b655",
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "593766a3",
+   "id": "b4a11e79",
    "metadata": {},
    "outputs": [
     {
@@ -2238,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "c54eb602",
+   "id": "cdef747e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2248,7 +2248,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "a7d510d7",
+   "id": "1d742016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "e17aa510",
+   "id": "b6846d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2268,7 +2268,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "840e319d",
+   "id": "6f932c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2281,7 +2281,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "148080f3",
+   "id": "a6b27a90",
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2387,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0fbb2aa3",
+   "id": "1022860e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2397,7 +2397,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "fe6d7bf8",
+   "id": "aa17e730",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2407,7 +2407,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "606568fc",
+   "id": "fc229b9f",
    "metadata": {},
    "outputs": [
     {
@@ -2428,7 +2428,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "60dcff8a",
+   "id": "d56253d6",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "58000b85",
+   "id": "e7f27daf",
    "metadata": {},
    "outputs": [
     {
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "bd293f4e",
+   "id": "ade3cfc9",
    "metadata": {},
    "outputs": [
     {
@@ -2519,7 +2519,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "80efb6a7",
+   "id": "863e55fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2529,7 +2529,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "32774d58",
+   "id": "765c86b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2539,7 +2539,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0ef5ec10",
+   "id": "ce621660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6ed92fa7",
+   "id": "0d08c5c8",
    "metadata": {},
    "outputs": [
     {
@@ -2576,7 +2576,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "7465abe2",
+   "id": "b2b338e7",
    "metadata": {},
    "outputs": [
     {
@@ -2621,7 +2621,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "05523ae6",
+   "id": "a6c06563",
    "metadata": {},
    "outputs": [
     {
@@ -2647,7 +2647,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "f87e3d1c",
+   "id": "c50a6cbd",
    "metadata": {},
    "outputs": [
     {
@@ -2823,7 +2823,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "e671375c",
+   "id": "f7879b71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2833,7 +2833,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "4b873518",
+   "id": "05eff3f9",
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2856,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "0bd7fb87",
+   "id": "cddc099b",
    "metadata": {},
    "outputs": [
     {
@@ -2888,7 +2888,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "44e5a5fd",
+   "id": "61f719f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2898,7 +2898,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "9a59ce91",
+   "id": "58211af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2910,7 +2910,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "083b7e56",
+   "id": "216db2c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2920,7 +2920,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "c35b50ca",
+   "id": "84ae3a9d",
    "metadata": {},
    "outputs": [
     {
@@ -2956,7 +2956,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "cc87310b",
+   "id": "4385278c",
    "metadata": {},
    "outputs": [
     {
@@ -2988,7 +2988,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "c154c1e6",
+   "id": "7aaf737d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2998,7 +2998,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "80eaa6f8",
+   "id": "16c37b83",
    "metadata": {},
    "outputs": [
     {
@@ -3041,7 +3041,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "ad2fd9f0",
+   "id": "7be5b8b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3051,7 +3051,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "a27e68f2",
+   "id": "99694eac",
    "metadata": {},
    "outputs": [
     {
@@ -3310,7 +3310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17b69594",
+   "id": "0b3667e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3329,7 +3329,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "f943957f",
+   "id": "9b21df0d",
    "metadata": {},
    "outputs": [
     {
@@ -3447,7 +3447,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "74dd138a",
+   "id": "21ae1ac9",
    "metadata": {},
    "outputs": [
     {
@@ -3578,7 +3578,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "ef65fa70",
+   "id": "a6af90ae",
    "metadata": {},
    "outputs": [
     {
@@ -3652,7 +3652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1f84807",
+   "id": "0dcdeb42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3664,7 +3664,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "4b0da070",
+   "id": "da6a58bf",
    "metadata": {},
    "outputs": [
     {
@@ -3697,7 +3697,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "12f50b69",
+   "id": "6ca04d7e",
    "metadata": {},
    "outputs": [
     {
@@ -3730,7 +3730,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "6e1f2d72",
+   "id": "d82fb425",
    "metadata": {},
    "outputs": [
     {
@@ -3763,7 +3763,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "95610818",
+   "id": "5b8fe7ca",
    "metadata": {},
    "outputs": [
     {
@@ -3796,7 +3796,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "f627bf1a",
+   "id": "d9a29658",
    "metadata": {},
    "outputs": [
     {
@@ -3829,7 +3829,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "29be8fe2",
+   "id": "edc7b956",
    "metadata": {},
    "outputs": [
     {
@@ -3946,7 +3946,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "073fad2d",
+   "id": "3b6d4512",
    "metadata": {},
    "outputs": [
     {
@@ -3967,7 +3967,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "e7bfdbc4",
+   "id": "daaf0255",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3977,7 +3977,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "e73d32e3",
+   "id": "6c318c0b",
    "metadata": {},
    "outputs": [
     {
@@ -4440,7 +4440,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "5e4eefa4",
+   "id": "a1a590f5",
    "metadata": {},
    "outputs": [
     {
@@ -4493,7 +4493,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "58bb3c11",
+   "id": "849b2aa3",
    "metadata": {},
    "outputs": [
     {
@@ -4525,7 +4525,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "c8d68181",
+   "id": "eacd2fdf",
    "metadata": {},
    "outputs": [
     {
@@ -4564,7 +4564,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "d27d6885",
+   "id": "34eab67a",
    "metadata": {},
    "outputs": [
     {
@@ -4695,7 +4695,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "d05a0836",
+   "id": "89371859",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4705,7 +4705,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "4a62104b",
+   "id": "49b3f6e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4719,7 +4719,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "d4613035",
+   "id": "85019867",
    "metadata": {},
    "outputs": [
     {
@@ -5211,7 +5211,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "71c9d8d3",
+   "id": "27f278c8",
    "metadata": {},
    "outputs": [
     {
@@ -5234,7 +5234,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "9c9f0309",
+   "id": "81f62ae8",
    "metadata": {},
    "outputs": [
     {
@@ -5256,7 +5256,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "d9ab78dc",
+   "id": "7712a3af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5271,7 +5271,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "14c0dee8",
+   "id": "234d041a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5295,8 +5295,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 142,
+   "id": "09d2892a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "f022bfb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "5cd40ab7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "194c6bf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "97203b96",
+   "id": "43008448",
    "metadata": {},
    "outputs": [],
    "source": []
