--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,13 @@
     "import psycopg2\n",
     "\n",
     "# from config import db_password\n",
-    "from config import db_password\n",
+    "#from config import db_password\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,8 +111,8 @@
     "    try:\n",
     "        wiki_movies_df.drop_duplicates(subset='imdb_id', inplace=True)\n",
     "        print(wiki_movies_df)\n",
-    "    except:\n",
-    "            \n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "    #  7. Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
     "        wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\n",
     "        wiki_movies_df = wiki_movies_df[wiki_columns_to_keep]\n",
@@ -121,8 +121,8 @@
     "        box_office = wiki_movies_df['Box office'].dropna()\n",
     "    \n",
     "    # 9. Convert the box office data created in Step 8 to string values using the lambda and join functions. \n",
-    "        box_office[box_office.map(lambda x: type(x) != str)]\n",
-    "    \n",
+    "        box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
+    " \n",
     "    # 10. Write a regular expression to match the six elements of \"form_one\" of the box office data.\n",
     "        form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on'\n",
     "        \n",
@@ -179,29 +179,21 @@
     "        \n",
     "    # 13. Clean the box office column in the wiki_movies_df DataFrame.\n",
     "    wiki_movies_df['box_office'] = box_office.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
+    "    wiki_movies_df.drop('Box office', axis=1, inplace=True)\n",
     "    \n",
     "    # 14. Clean the budget column in the wiki_movies_df DataFrame.\n",
     "    budget = wiki_movies_df['Budget'].dropna()\n",
     "    budget = budget.map(lambda x: ' '.join(x) if type(x) == list else x)\n",
     "    budget = budget.str.replace(r'\\$.*[-—–](?![a-z])', '$', regex=True)\n",
-    "    \n",
-    "    matches_form_one = budget.str.contains(form_one, flags=re.IGNORECASE, na=False)\n",
-    "    matches_form_two = budget.str.contains(form_two, flags=re.IGNORECASE, na=False)\n",
-    "   \n",
     "    budget = budget.str.replace(r'\\[\\d+\\]\\s*', '')\n",
-    "    budget[~matches_form_one & ~matches_form_two]\n",
-    "    \n",
+    "    # recycling form_one and form_two from box_office work\n",
     "    wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
-    "    wiki_movies_df.drop('Budget', axis=1, inplace=True) \n",
-    "    \n",
+    "    wiki_movies_df.drop('Budget', axis=1, inplace=True)    \n",
+    "\n",
     "    # 15. Clean the release date column in the wiki_movies_df DataFrame.\n",
     "    \n",
     "    release_date = wiki_movies_df['Release date'].dropna().apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
     "    \n",
-    "        \n",
-    "        #Code below is used to create our own function to extract date.\n",
-    "        # Above codeis built in date time method in Pandas\n",
-    "        \n",
     "    date_form_one = r'(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s[123]?\\d,\\s\\d{4}'\n",
     "    date_form_two = r'\\d{4}.[01]\\d.[0123]\\d'\n",
     "    date_form_three = r'(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s\\d{4}'\n",
@@ -216,22 +208,25 @@
     "    running_time_extract = running_time.str.extract(r'(\\d+)\\s*ho?u?r?s?\\s*(\\d*)|(\\d+)\\s*m')\n",
     "    running_time_extract = running_time_extract.apply(lambda col: pd.to_numeric(col, errors='coerce')).fillna(0)\n",
     "    wiki_movies_df['running_time'] = running_time_extract.apply(lambda row: row[0]*60 + row[1] if row[2] == 0 else row[2], axis=1)\n",
-    "#     wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
+    "    wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
+    "    \n",
+    "    \n",
+    "    #     wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
     "    \n",
     "    \n",
     "    # Return three variables. The first is the wiki_movies_df DataFrame\n",
     "    \n",
-    "    return wiki_movies_df, kaggle_metadata, ratings "
+    "    return wiki_movies_df, kaggle_metadata, ratings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 17. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = r\"C:\\Users\\britt\\Desktop\\DataClass\\UCB-VIRT-DATA-PT-02-2022-U-B-main\\Live-Sessions\\08-ETL\\Challenge\\Resources\"\n",
+    "file_dir = r\"C:\\Users\\britt\\Desktop\\DataClass\\UCB-VIRT-DATA-PT-02-2022-U-B-main\\Live-Sessions\\08-ETL\\Challenge\\Movies-ETL\\Resources\"\n",
     "\n",
     "# The Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia.movies.json'\n",
@@ -250,14 +245,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['imdb_id'], dtype='object')\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\britt\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:114: FutureWarning: The default value of regex will change from True to False in a future version.\n"
+      "C:\\Users\\britt\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:111: FutureWarning: The default value of regex will change from True to False in a future version.\n"
      ]
     }
    ],
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -310,8 +312,8 @@
        "      <th>Starring</th>\n",
        "      <th>Cinematography</th>\n",
        "      <th>Release date</th>\n",
-       "      <th>Running time</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Language</th>\n",
        "      <th>...</th>\n",
        "      <th>Distributor</th>\n",
        "      <th>Editor(s)</th>\n",
@@ -336,8 +338,8 @@
        "      <td>[Andrew Dice Clay, Wayne Newton, Priscilla Pre...</td>\n",
        "      <td>Oliver Wood</td>\n",
        "      <td>[July 11, 1990, (, 1990-07-11, )]</td>\n",
-       "      <td>102 minutes</td>\n",
        "      <td>United States</td>\n",
+       "      <td>English</td>\n",
        "      <td>...</td>\n",
        "      <td>20th Century Fox</td>\n",
        "      <td>Michael Tronick</td>\n",
@@ -360,8 +362,8 @@
        "      <td>[Jason Patric, Rachel Ward, Bruce Dern, George...</td>\n",
        "      <td>Mark Plummer</td>\n",
        "      <td>[May 17, 1990, (, 1990-05-17, ), (Cannes Film ...</td>\n",
-       "      <td>114 minutes</td>\n",
        "      <td>United States</td>\n",
+       "      <td>English</td>\n",
        "      <td>...</td>\n",
        "      <td>Avenue Pictures</td>\n",
        "      <td>Howard E. Smith</td>\n",
@@ -384,8 +386,8 @@
        "      <td>[Mel Gibson, Robert Downey Jr., Nancy Travis, ...</td>\n",
        "      <td>Roger Deakins</td>\n",
        "      <td>[August 10, 1990, (, 1990-08-10, )]</td>\n",
-       "      <td>113 minutes</td>\n",
        "      <td>United States</td>\n",
+       "      <td>[English, Lao]</td>\n",
        "      <td>...</td>\n",
        "      <td>TriStar Pictures</td>\n",
        "      <td>[John Bloom, Lois Freeman-Fox]</td>\n",
@@ -408,8 +410,8 @@
        "      <td>[Alec Baldwin, Blythe Danner, Judy Davis, Mia ...</td>\n",
        "      <td>Carlo Di Palma</td>\n",
        "      <td>[December 25, 1990, (, 1990-12-25, )]</td>\n",
-       "      <td>106 minutes</td>\n",
        "      <td>United States</td>\n",
+       "      <td>English</td>\n",
        "      <td>...</td>\n",
        "      <td>Orion Pictures</td>\n",
        "      <td>Susan E. Morse</td>\n",
@@ -432,8 +434,8 @@
        "      <td>[Paul Hogan, Elias Koteas, Linda Kozlowski]</td>\n",
        "      <td>Russell Boyd</td>\n",
        "      <td>December 19, 1990</td>\n",
-       "      <td>95 minutes</td>\n",
        "      <td>US</td>\n",
+       "      <td>English</td>\n",
        "      <td>...</td>\n",
        "      <td>Paramount Pictures</td>\n",
        "      <td>David Stiven</td>\n",
@@ -448,7 +450,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -480,19 +482,19 @@
        "3  [Alec Baldwin, Blythe Danner, Judy Davis, Mia ...  Carlo Di Palma   \n",
        "4        [Paul Hogan, Elias Koteas, Linda Kozlowski]    Russell Boyd   \n",
        "\n",
-       "                                        Release date Running time  \\\n",
-       "0                  [July 11, 1990, (, 1990-07-11, )]  102 minutes   \n",
-       "1  [May 17, 1990, (, 1990-05-17, ), (Cannes Film ...  114 minutes   \n",
-       "2                [August 10, 1990, (, 1990-08-10, )]  113 minutes   \n",
-       "3              [December 25, 1990, (, 1990-12-25, )]  106 minutes   \n",
-       "4                                  December 19, 1990   95 minutes   \n",
+       "                                        Release date        Country  \\\n",
+       "0                  [July 11, 1990, (, 1990-07-11, )]  United States   \n",
+       "1  [May 17, 1990, (, 1990-05-17, ), (Cannes Film ...  United States   \n",
+       "2                [August 10, 1990, (, 1990-08-10, )]  United States   \n",
+       "3              [December 25, 1990, (, 1990-12-25, )]  United States   \n",
+       "4                                  December 19, 1990             US   \n",
        "\n",
-       "         Country  ...         Distributor                       Editor(s)  \\\n",
-       "0  United States  ...    20th Century Fox                 Michael Tronick   \n",
-       "1  United States  ...     Avenue Pictures                 Howard E. Smith   \n",
-       "2  United States  ...    TriStar Pictures  [John Bloom, Lois Freeman-Fox]   \n",
-       "3  United States  ...      Orion Pictures                  Susan E. Morse   \n",
-       "4             US  ...  Paramount Pictures                    David Stiven   \n",
+       "         Language  ...         Distributor                       Editor(s)  \\\n",
+       "0         English  ...    20th Century Fox                 Michael Tronick   \n",
+       "1         English  ...     Avenue Pictures                 Howard E. Smith   \n",
+       "2  [English, Lao]  ...    TriStar Pictures  [John Bloom, Lois Freeman-Fox]   \n",
+       "3         English  ...      Orion Pictures                  Susan E. Morse   \n",
+       "4         English  ...  Paramount Pictures                    David Stiven   \n",
        "\n",
        "               Composer(s)                  Producer(s)  \\\n",
        "0  [Cliff Eidelman, Yello]   [Steve Perry, Joel Silver]   \n",
@@ -508,17 +510,17 @@
        "3                                    NaN                   Woody Allen   \n",
        "4                                    NaN                    Paul Hogan   \n",
        "\n",
-       "   box_office      budget release_date  running_time  \n",
-       "0  21400000.0  20000000.0   1990-07-11         102.0  \n",
-       "1   2700000.0   6000000.0   1990-05-17         114.0  \n",
-       "2  57718089.0  35000000.0   1990-08-10         113.0  \n",
-       "3   7331647.0  12000000.0   1990-12-25         106.0  \n",
-       "4   6939946.0  25000000.0   1990-12-19          95.0  \n",
+       "   box_office      budget  release_date running_time  \n",
+       "0  21400000.0  20000000.0    1990-07-11        102.0  \n",
+       "1   2700000.0   6000000.0    1990-05-17        114.0  \n",
+       "2  57718089.0  35000000.0    1990-08-10        113.0  \n",
+       "3   7331647.0  12000000.0    1990-12-25        106.0  \n",
+       "4   6939946.0  25000000.0    1990-12-19         95.0  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -544,10 +546,8 @@
        " 'Starring',\n",
        " 'Cinematography',\n",
        " 'Release date',\n",
-       " 'Running time',\n",
        " 'Country',\n",
        " 'Language',\n",
-       " 'Box office',\n",
        " 'Director',\n",
        " 'Distributor',\n",
        " 'Editor(s)',\n",
@@ -561,7 +561,7 @@
        " 'running_time']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
