--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "import psycopg2\n",
     "\n",
     "# from config import db_password\n",
-    "from config import db_password\n",
+    "#from config import db_password\n",
     "import time\n",
     "\n",
     "# 1. Create a function that takes in three arguments;\n",
@@ -37,7 +37,7 @@
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
     "\n",
     "# 6 Create the path to your file directory and variables for the three files. \n",
-    "file_dir = r\"C:\\Users\\britt\\Desktop\\DataClass\\UCB-VIRT-DATA-PT-02-2022-U-B-main\\Live-Sessions\\08-ETL\\Challenge\\Resources\"\n",
+    "file_dir = r\"C:\\Users\\britt\\Desktop\\DataClass\\UCB-VIRT-DATA-PT-02-2022-U-B-main\\Live-Sessions\\08-ETL\\Challenge\\Movies-ETL\\Resources\"\n",
     "\n",
     "# Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia.movies.json'\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "[5 rows x 193 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "4       1     1246     5.0  1425941556"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
